@@ -27,12 +27,13 @@
   (menu-use "paginae/act/dest")
   (mv-click-gob gob +left-button+ +mf-none+)
   (wait-for-progress)
-  (mv-click-gob (my-gob) +right-button+ +mf-none+))
+  (mv-click-gob (my-gob) +right-button+ +mf-none+)
+  (check-stam-and-drink))
 
 (script
   (let ((name (gob-name (get-selected-gob))))
     (loop
-       for gob = (gob-get-closest-by-name name)
+       for gob = (gob-get-closest-by-name-and-path name)
        while gob
        do (destroy gob))))
     
