@@ -1198,8 +1198,8 @@ public class MapView extends PView implements DTarget, Console.Directory {
     }
 
     private abstract static class Clicklist<T> extends RenderList {
-        private Map<States.ColState, T> rmap = new WeakHashMap<States.ColState, T>();
-        private Map<T, Reference<States.ColState>> idmap = new WeakHashMap<T, Reference<States.ColState>>();
+        private Map<States.ColState, T> rmap = new WeakHashMap<>();
+        private Map<T, Reference<States.ColState>> idmap = new WeakHashMap<>();
         private int i = 1;
         private GLState.Buffer plain, bk;
 
@@ -1256,7 +1256,7 @@ public class MapView extends PView implements DTarget, Console.Directory {
         }
 
         public boolean aging() {
-            return (i > (1 << 20));
+            return (i > (1 << 13));
         }
     }
 
@@ -1938,6 +1938,14 @@ public class MapView extends PView implements DTarget, Console.Directory {
         private ClickInfo gobcl;
         private int dfl = 0;
         private final int flags;
+
+        /**
+         * For Resource classes..
+         */
+        public Hittest(Coord c) {
+            clickc = c;
+            this.flags = 0;
+        }
 
         public Hittest(Coord c, int flags) {
             clickc = c;
