@@ -1,3 +1,9 @@
+4/14/19
+    - Minor changes to dig clay script, destroy
+    - fixed issue with sketchpad crashing
+    - Reduced aging for clicks
+    - destumper script for more generic stump removal
+
 4/13/19
     - Scout script is born
     - Added in Mark for script to the alt+ right click menu for scripts that need such input
